--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8" />
     <title>Hello World</title>
     <link rel="stylesheet" href="/css/custom.css">
-    <script src="https://unpkg.com/react@latest/dist/react.js"></script>
-    <script src="https://unpkg.com/react-dom@latest/dist/react-dom.js"></script>
-    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+
+    <script src="/js/react/react.js"></script>
+    <script src="/js/react/react-dom.js"></script>
+    <script src="/js/react/babel.min.js"></script>
 
   </head>
   <body>
     <div id="container"></div>
 
-    <script type="text/babel" src="/js/square.js"></script>
-    <script type="text/babel" src="/js/board.js"></script>
-    <script type="text/babel" src="/js/game.js"></script>
-    <script type="text/babel" src="/js/main.js"></script>
+    <script type="text/babel" src="/js/custom/square.js"></script>
+    <script type="text/babel" src="/js/custom/row.js"></script>
+    <script type="text/babel" src="/js/custom/board.js"></script>
+    <script type="text/babel">
+      ReactDOM.render(
+        <Board />,
+        document.getElementById('container')
+      );
+    </script>
   </body>
 </html>
